fix: Show useful instruments and signup after main content on mobile. Closes #144

--- a/frontend/src/components/Home/styles.scss
+++ b/frontend/src/components/Home/styles.scss
@@ -7,10 +7,3 @@
     flex-direction: row-reverse;
   }
 }
-
-@media (max-width: 768px) {
-  .homepage-sidebar .instruments-wrapper,
-  .pages-list, .newsletter {
-    display: none;
-  }
-}
